session-5/myapp-base-deployment.yaml
# nginx-deployment-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-base-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-base
  template:
    metadata:
      labels:
        app: myapp-base
    spec:
      containers:
        - name: myapp
          image: myapp:baseImage
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-base-service
spec:
  selector:
    app: myapp-base
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
