session-5/myapp-production-deployment.yaml
# nginx-deployment-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-production-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-production
  template:
    metadata:
      labels:
        app: myapp-production
    spec:
      containers:
        - name: myapp
          image: myapp:productionImage
          resources:
            requests:
               memory: 100
               cpu: 1
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: myapp-production-service
spec:
  selector:
    app: myapp-production
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
